// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> Renders <Home /> component correctly 1`] = `
<div>
  <div
    aria-label="Home Page"
    role="main"
  >
    <div
      class="row"
    >
      <div
        class="section"
      >
        <table
          aria-label="Hacker News List"
          class="striped responsive-table"
          role="contentinfo"
        >
          <thead>
            <tr>
              <th>
                Comments
              </th>
              <th>
                Vote count
              </th>
              <th>
                UpVote
              </th>
              <th>
                New Details
              </th>
              <th>
                 
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                colspan="5"
              >
                <div>
                  No Data Found
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="carousel-container"
          style="padding-top: 20px; text-align: right;"
        >
          <button
            aria-label="Previous Button"
            class="btn red darken-4"
            disabled=""
            name="prev"
            role="navigation"
            style="margin-right: 10px;"
            type="button"
          >
            Previous
          </button>
          <button
            aria-label="Next Button"
            class="btn red darken-4"
            name="next"
            role="navigation"
            type="button"
          >
            Next
          </button>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<Home /> Renders <Home /> component correctly 2`] = `
<div>
  <div
    aria-label="Home Page"
    role="main"
  >
    <div
      class="row"
    >
      <div
        class="section"
      >
        <table
          aria-label="Hacker News List"
          class="striped responsive-table"
          role="contentinfo"
        >
          <thead>
            <tr>
              <th>
                Comments
              </th>
              <th>
                Vote count
              </th>
              <th>
                UpVote
              </th>
              <th>
                New Details
              </th>
              <th>
                 
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              title="12345"
            >
              <td>
                10
              </td>
              <td>
                100
              </td>
              <td>
                <button
                  aria-label="UP Vote"
                  role="navigation"
                  style="padding: 0px; font-size: 0px; width: 60px; height: 60px; background-color: rgba(0, 0, 0, 0.05); cursor: pointer; overflow: hidden;"
                  type="button"
                >
                  <i
                    class="material-icons medium"
                  >
                    arrow_drop_up
                  </i>
                </button>
              </td>
              <td>
                <h6>
                  Name
                </h6>
                <small>
                   google.com 
                </small>
                <small>
                  by
                </small>
                <strong>
                   Author 
                </strong>
                <small>
                  <time
                    datetime="2020-07-30T19:41:03.000Z"
                    title="Thu Jul 30 2020 23:41:03 GMT+0400 (Gulf Standard Time)"
                  >
                    in 3 hours
                  </time>
                </small>
              </td>
              <td>
                <button
                  aria-label="Hide News"
                  class="btn-small"
                  role="navigation"
                  type="button"
                >
                  hide
                </button>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="carousel-container"
          style="padding-top: 20px; text-align: right;"
        >
          <button
            aria-label="Previous Button"
            class="btn red darken-4"
            disabled=""
            name="prev"
            role="navigation"
            style="margin-right: 10px;"
            type="button"
          >
            Previous
          </button>
          <button
            aria-label="Next Button"
            class="btn red darken-4"
            name="next"
            role="navigation"
            type="button"
          >
            Next
          </button>
        </div>
        <div
          aria-label="Line Chart"
          role="form"
        >
          <div
            style="padding: 200px 20%;"
          >
            <div
              class="progress"
            >
              <div
                class="indeterminate"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
